# linTranslate

./: LICENSE  README.md  package.json
.github/workflows/: release.yml
docs/: TODO.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: screenshot.rs  window.rs
src/services/tauri/: commands.ts
src/services/translator/: image-translator.ts
src/windows/popup/: PopupWindow.vue
