[package]
name = "local-bubble-translator"
version = "0.1.3"
description = "Local Bubble Translator - macOS desktop app for text and image translation"
authors = []
edition = "2021"

[[bin]]
name = "lintranslate"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.9"
